# webgpu_naive_gauss_elimination

./: .gitignore
wasm_modules/gauss_elimination/: Cargo.toml  commands.txt
wasm_modules/gauss_elimination/shaders/: compute.wgsl
wasm_modules/gauss_elimination/src/: lib.rs
web_layout/: index.html
web_layout/js/: main.js
