[package]
name = "gauss_elimination"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
js-sys = "0.3.65"


[dependencies.web-sys]
version = "0.3.65"
features = [
    "Window",
    "Navigator",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuBuffer", 
    "GpuBufferDescriptor",
    "gpu_buffer_usage",
    "GpuShaderModuleDescriptor",
    "GpuShaderModule",
    "GpuProgrammableStage",
    "GpuComputePipelineDescriptor",
    "GpuComputePipeline", 
    "GpuBufferBinding",
    "GpuBindGroupEntry",
    "GpuBindGroupLayout",
    "GpuBindGroupDescriptor",
    "GpuBindGroup",
    "GpuCommandEncoder",
    "GpuComputePassEncoder",
    "GpuCommandBuffer",
    "GpuQueue",
    "gpu_map_mode",

    "Worker",
    "WorkerGlobalScope", 
    "WorkerNavigator",

    "GpuSupportedLimits",

    "gpu_shader_stage",
    "GpuBindGroupLayoutEntry",
    "GpuBufferBindingLayout",
    "GpuBufferBindingType",
    "GpuBindGroupLayoutDescriptor",
    "GpuPipelineLayoutDescriptor",
    "GpuPipelineLayout",
]
